// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compile Contracts Simple 1 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 19))
            storage (literal (nat 1) (\\"Compilation.test.ts\\" 20))
            storage_type (())
            messages ((ep1 True False False True (\\"Compilation.test.ts\\" 22) ((set_type (params (\\"Compilation.test.ts\\" 24)) \\"nat\\" (\\"Compilation.test.ts\\" 24)) (defineLocal \\"A\\" (literal (nat 1) (\\"Compilation.test.ts\\" 24)) True (\\"Compilation.test.ts\\" 24)) (verify (eq (getLocal \\"A\\" (\\"Compilation.test.ts\\" 24)) (params (\\"Compilation.test.ts\\" 24)) (\\"Compilation.test.ts\\" 24)) (literal (string \\"Error Message\\") (\\"Compilation.test.ts\\" 24)) (\\"Compilation.test.ts\\" 24)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 19))
        )
        "
`;

exports[`Compile Contracts Simple 1 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "prim": "nat",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "annots": Array [
          "%ep1",
        ],
        "prim": "nat",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "UNPAIR",
        },
        Object {
          "args": Array [
            Object {
              "prim": "nat",
            },
            Object {
              "int": "1",
            },
          ],
          "prim": "PUSH",
        },
        Object {
          "prim": "COMPARE",
        },
        Object {
          "prim": "EQ",
        },
        Object {
          "args": Array [
            Array [],
            Array [
              Object {
                "args": Array [
                  Object {
                    "prim": "string",
                  },
                  Object {
                    "string": "Error Message",
                  },
                ],
                "prim": "PUSH",
              },
              Object {
                "prim": "FAILWITH",
              },
            ],
          ],
          "prim": "IF",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Compile Contracts Simple 2 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 36))
            storage (list (\\"Compilation.test.ts\\" 37)  (literal (nat 1) (\\"Compilation.test.ts\\" 37)))
            storage_type (())
            messages ((ep1 True False False True (\\"Compilation.test.ts\\" 39) ((set_type (params (\\"Compilation.test.ts\\" 42)) \\"bool\\" (\\"Compilation.test.ts\\" 42)) (defineLocal \\"A\\" (literal (bool False) (\\"Compilation.test.ts\\" 42)) True (\\"Compilation.test.ts\\" 42)) (verify (eq (getLocal \\"A\\" (\\"Compilation.test.ts\\" 42)) (params (\\"Compilation.test.ts\\" 42)) (\\"Compilation.test.ts\\" 42)) (literal (string \\"Error Message\\") (\\"Compilation.test.ts\\" 42)) (\\"Compilation.test.ts\\" 42)))))
            flags ((erase-comments))
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 100) (\\"Compilation.test.ts\\" 48))
        )
        "
`;

exports[`Compile Contracts Simple 2 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "args": Array [
          Object {
            "prim": "nat",
          },
        ],
        "prim": "list",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "annots": Array [
          "%ep1",
        ],
        "prim": "bool",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "UNPAIR",
        },
        Object {
          "args": Array [
            Object {
              "prim": "bool",
            },
            Object {
              "prim": "False",
            },
          ],
          "prim": "PUSH",
        },
        Object {
          "prim": "COMPARE",
        },
        Object {
          "prim": "EQ",
        },
        Object {
          "args": Array [
            Array [],
            Array [
              Object {
                "args": Array [
                  Object {
                    "prim": "string",
                  },
                  Object {
                    "string": "Error Message",
                  },
                ],
                "prim": "PUSH",
              },
              Object {
                "prim": "FAILWITH",
              },
            ],
          ],
          "prim": "IF",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Compile Contracts Simple 3 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 58))
            storage (list (\\"Compilation.test.ts\\" 60)  )
            storage_type ((list \\"nat\\"))
            messages ((ep1 True False False True (\\"Compilation.test.ts\\" 62) ((set_type (params (\\"Compilation.test.ts\\" 62)) (list \\"nat\\") (\\"Compilation.test.ts\\" 62)) (defineLocal \\"some_address\\" (literal (address tz1) (\\"Compilation.test.ts\\" 62)) True (\\"Compilation.test.ts\\" 62)) (verify (eq (getLocal \\"some_address\\" (\\"Compilation.test.ts\\" 62)) (sender) (\\"Compilation.test.ts\\" 62)) (literal (string \\"Not Admin!\\") (\\"Compilation.test.ts\\" 62)) (\\"Compilation.test.ts\\" 62)) (set (data) (params (\\"Compilation.test.ts\\" 62)) (\\"Compilation.test.ts\\" 62)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 58))
        )
        "
`;

exports[`Compile Contracts Simple 3 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "args": Array [
          Object {
            "prim": "nat",
          },
        ],
        "prim": "list",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "annots": Array [
          "%ep1",
        ],
        "args": Array [
          Object {
            "prim": "nat",
          },
        ],
        "prim": "list",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "CAR",
        },
        Object {
          "args": Array [
            Object {
              "prim": "address",
            },
            Object {
              "string": "tz1",
            },
          ],
          "prim": "PUSH",
        },
        Object {
          "prim": "SENDER",
        },
        Object {
          "prim": "COMPARE",
        },
        Object {
          "prim": "EQ",
        },
        Object {
          "args": Array [
            Array [],
            Array [
              Object {
                "args": Array [
                  Object {
                    "prim": "string",
                  },
                  Object {
                    "string": "Not Admin!",
                  },
                ],
                "prim": "PUSH",
              },
              Object {
                "prim": "FAILWITH",
              },
            ],
          ],
          "prim": "IF",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Compile Contracts Storage (None) 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 91))
            storage (variant \\"None\\" (unit) (\\"Compilation.test.ts\\" 91))
            storage_type ((option \\"nat\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 91))
        )
        "
`;

exports[`Compile Contracts Storage (None) 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "args": Array [
          Object {
            "prim": "nat",
          },
        ],
        "prim": "option",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "prim": "unit",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "CDR",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Compile Contracts Storage (Record) 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 98))
            storage (record (\\"Compilation.test.ts\\" 100) (testField1 (literal (nat 1) (\\"Compilation.test.ts\\" 101))) (testField2 (list (\\"Compilation.test.ts\\" 102)  (literal (string \\"Hello World\\") (\\"Compilation.test.ts\\" 102)))))
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 98))
        )
        "
`;

exports[`Compile Contracts Storage (Record) 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "args": Array [
          Object {
            "annots": Array [
              "%testField1",
            ],
            "prim": "nat",
          },
          Object {
            "annots": Array [
              "%testField2",
            ],
            "args": Array [
              Object {
                "prim": "string",
              },
            ],
            "prim": "list",
          },
        ],
        "prim": "pair",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "prim": "unit",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "CDR",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Compile Contracts Storage (Some) 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 85))
            storage (variant \\"Some\\" (literal (nat 1) (\\"Compilation.test.ts\\" 85)) (\\"Compilation.test.ts\\" 85))
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 85))
        )
        "
`;

exports[`Compile Contracts Storage (Some) 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "args": Array [
          Object {
            "prim": "nat",
          },
        ],
        "prim": "option",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "prim": "unit",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "CDR",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;

exports[`Compile Contracts Storage (Unit) 1`] = `
"
        (
            template_id (static_id 0 (\\"Compilation.test.ts\\" 78))
            storage (unit)
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"Compilation.test.ts\\" 78))
        )
        "
`;

exports[`Compile Contracts Storage (Unit) 2`] = `
Array [
  Object {
    "args": Array [
      Object {
        "prim": "unit",
      },
    ],
    "prim": "storage",
  },
  Object {
    "args": Array [
      Object {
        "prim": "unit",
      },
    ],
    "prim": "parameter",
  },
  Object {
    "args": Array [
      Array [
        Object {
          "prim": "CDR",
        },
        Object {
          "args": Array [
            Object {
              "prim": "operation",
            },
          ],
          "prim": "NIL",
        },
        Object {
          "prim": "PAIR",
        },
      ],
    ],
    "prim": "code",
  },
]
`;
